--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,5 @@ jobs:
   include:
     - stage: Build
       name: Integration test against latest Docker
-      before_install: ./install_docker.sh
-      script: docker version
-
+      before_install: ./install_docker.sh && ./configure_docker_tls.sh
+      script: DOCKER_CERTS_DIR=$HOME/.docker/certs DOCKER_TLS_VERIFY=1 DOCKER_HOST=tcp://localhost:2376 docker version
