--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ jobs:
     - stage: Build
       name: Integration test against latest Docker
       before_install: ./install_docker.sh && ./configure_docker_tls.sh
-      script: DOCKER_CERT_PATH=$HOME/.docker/certs DOCKER_TLS_VERIFY=1 DOCKER_HOST=tcp://localhost:2376 docker version
+      script: 
+        - ls -la ~/.docker/certs
+        - DOCKER_CERT_PATH=$HOME/.docker/certs DOCKER_TLS_VERIFY=1 DOCKER_HOST=tcp://localhost:2376 docker version
